// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-accordion renders default html 1`] = `
<c-accordion>
  <mock:shadow-root>
    <div class="c-accordion">
      <slot></slot>
    </div>
  </mock:shadow-root>
  <c-accordion-item heading="One" value="one">
    <mock:shadow-root>
      <div class="c-accordion-item">
        <button aria-controls="panel__9bfcb37d-069c-4b18-8e5f-62cf7a5ac1c7" aria-expanded="false" aria-label="One" class="c-accordion-item__header" id="header__9bfcb37d-069c-4b18-8e5f-62cf7a5ac1c7" tabindex="0">
          <div class="c-accordion-item__icon">
            <slot name="icon"></slot>
          </div>
          <div class="c-accordion-item__title">
            One
          </div>
          <div class="c-accordion-item__indicator">
            <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
              <path d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z" fill="var(--csc-primary)"></path>
            </svg>
          </div>
        </button>
        <div class="c-accordion-item__content-wrapper">
          <div aria-labelledby="header__9bfcb37d-069c-4b18-8e5f-62cf7a5ac1c7" class="c-accordion-item__content" id="panel__9bfcb37d-069c-4b18-8e5f-62cf7a5ac1c7" role="region"></div>
        </div>
      </div>
    </mock:shadow-root>
    <i class="mdi mdi-access-point" slot="icon"></i>
    Lorem ipsum dolor sit amet.
  </c-accordion-item>
  <c-accordion-item heading="Two" value="two">
    <mock:shadow-root>
      <div class="c-accordion-item">
        <button aria-controls="panel__b5cdfa2a-db97-4cef-ab9f-ea9c49132791" aria-expanded="false" aria-label="Two" class="c-accordion-item__header" id="header__b5cdfa2a-db97-4cef-ab9f-ea9c49132791" tabindex="0">
          <div class="c-accordion-item__icon">
            <slot name="icon"></slot>
          </div>
          <div class="c-accordion-item__title">
            Two
          </div>
          <div class="c-accordion-item__indicator">
            <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
              <path d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z" fill="var(--csc-primary)"></path>
            </svg>
          </div>
        </button>
        <div class="c-accordion-item__content-wrapper">
          <div aria-labelledby="header__b5cdfa2a-db97-4cef-ab9f-ea9c49132791" class="c-accordion-item__content" id="panel__b5cdfa2a-db97-4cef-ab9f-ea9c49132791" role="region"></div>
        </div>
      </div>
    </mock:shadow-root>
    <i class="mdi mdi-nas" slot="icon"></i>
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, perspiciatis?
  </c-accordion-item>
  <c-accordion-item heading="Three" value="three">
    <mock:shadow-root>
      <div class="c-accordion-item">
        <button aria-controls="panel__4cb4a5cf-3586-445a-a3c8-e8866165ed3f" aria-expanded="false" aria-label="Three" class="c-accordion-item__header" id="header__4cb4a5cf-3586-445a-a3c8-e8866165ed3f" tabindex="0">
          <div class="c-accordion-item__icon">
            <slot name="icon"></slot>
          </div>
          <div class="c-accordion-item__title">
            Three
          </div>
          <div class="c-accordion-item__indicator">
            <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
              <path d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z" fill="var(--csc-primary)"></path>
            </svg>
          </div>
        </button>
        <div class="c-accordion-item__content-wrapper">
          <div aria-labelledby="header__4cb4a5cf-3586-445a-a3c8-e8866165ed3f" class="c-accordion-item__content" id="panel__4cb4a5cf-3586-445a-a3c8-e8866165ed3f" role="region"></div>
        </div>
      </div>
    </mock:shadow-root>
    <i class="mdi mdi-camera" slot="icon"></i>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia voluptatum perspiciatis itaque!
  </c-accordion-item>
</c-accordion>
`;

exports[`c-accordion renders expanded accordion-item 1`] = `
<c-accordion value="one">
  <mock:shadow-root>
    <div class="c-accordion">
      <slot></slot>
    </div>
  </mock:shadow-root>
  <c-accordion-item heading="One" value="one">
    <mock:shadow-root>
      <div class="c-accordion-item c-accordion-item--expanded">
        <button aria-controls="panel__e577c16e-f86d-498a-bf03-4a0ebe39056e" aria-expanded="true" aria-label="One" class="c-accordion-item__header c-accordion-item__header--expanded" id="header__e577c16e-f86d-498a-bf03-4a0ebe39056e" tabindex="0">
          <div class="c-accordion-item__icon">
            <slot name="icon"></slot>
          </div>
          <div class="c-accordion-item__title">
            One
          </div>
          <div class="c-accordion-item__indicator c-accordion-item__indicator--expanded">
            <svg class="expanded" fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
              <path d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z" fill="var(--csc-primary)"></path>
            </svg>
          </div>
        </button>
        <div class="c-accordion-item__content-wrapper">
          <div aria-labelledby="header__e577c16e-f86d-498a-bf03-4a0ebe39056e" class="c-accordion-item__content" id="panel__e577c16e-f86d-498a-bf03-4a0ebe39056e" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </mock:shadow-root>
    <i class="mdi mdi-access-point" slot="icon"></i>
    Lorem ipsum dolor sit amet.
  </c-accordion-item>
  <c-accordion-item heading="Two" value="two">
    <mock:shadow-root>
      <div class="c-accordion-item">
        <button aria-controls="panel__aabf0671-6821-412a-9ee5-1c00c5c52de3" aria-expanded="false" aria-label="Two" class="c-accordion-item__header" id="header__aabf0671-6821-412a-9ee5-1c00c5c52de3" tabindex="0">
          <div class="c-accordion-item__icon">
            <slot name="icon"></slot>
          </div>
          <div class="c-accordion-item__title">
            Two
          </div>
          <div class="c-accordion-item__indicator">
            <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
              <path d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z" fill="var(--csc-primary)"></path>
            </svg>
          </div>
        </button>
        <div class="c-accordion-item__content-wrapper">
          <div aria-labelledby="header__aabf0671-6821-412a-9ee5-1c00c5c52de3" class="c-accordion-item__content" id="panel__aabf0671-6821-412a-9ee5-1c00c5c52de3" role="region"></div>
        </div>
      </div>
    </mock:shadow-root>
    <i class="mdi mdi-nas" slot="icon"></i>
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, perspiciatis?
  </c-accordion-item>
  <c-accordion-item heading="Three" value="three">
    <mock:shadow-root>
      <div class="c-accordion-item">
        <button aria-controls="panel__b48775d5-9fbb-41c5-b3c0-cde705e2aa3a" aria-expanded="false" aria-label="Three" class="c-accordion-item__header" id="header__b48775d5-9fbb-41c5-b3c0-cde705e2aa3a" tabindex="0">
          <div class="c-accordion-item__icon">
            <slot name="icon"></slot>
          </div>
          <div class="c-accordion-item__title">
            Three
          </div>
          <div class="c-accordion-item__indicator">
            <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
              <path d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z" fill="var(--csc-primary)"></path>
            </svg>
          </div>
        </button>
        <div class="c-accordion-item__content-wrapper">
          <div aria-labelledby="header__b48775d5-9fbb-41c5-b3c0-cde705e2aa3a" class="c-accordion-item__content" id="panel__b48775d5-9fbb-41c5-b3c0-cde705e2aa3a" role="region"></div>
        </div>
      </div>
    </mock:shadow-root>
    <i class="mdi mdi-camera" slot="icon"></i>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia voluptatum perspiciatis itaque!
  </c-accordion-item>
</c-accordion>
`;

exports[`c-accordion renders outlined items 1`] = `
<c-accordion outlined="" value="one">
  <mock:shadow-root>
    <div class="c-accordion">
      <slot></slot>
    </div>
  </mock:shadow-root>
  <c-accordion-item heading="One" value="one">
    <mock:shadow-root>
      <div class="c-accordion-item c-accordion-item--expanded c-accordion-item--outlined">
        <button aria-controls="panel__eb9816fc-8959-4678-a89e-1a7019357713" aria-expanded="true" aria-label="One" class="c-accordion-item__header c-accordion-item__header--expanded" id="header__eb9816fc-8959-4678-a89e-1a7019357713" tabindex="0">
          <div class="c-accordion-item__icon">
            <slot name="icon"></slot>
          </div>
          <div class="c-accordion-item__title">
            One
          </div>
          <div class="c-accordion-item__indicator c-accordion-item__indicator--expanded">
            <svg class="expanded" fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
              <path d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z" fill="var(--csc-primary)"></path>
            </svg>
          </div>
        </button>
        <div class="c-accordion-item__content-wrapper">
          <div aria-labelledby="header__eb9816fc-8959-4678-a89e-1a7019357713" class="c-accordion-item__content" id="panel__eb9816fc-8959-4678-a89e-1a7019357713" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </mock:shadow-root>
    <i class="mdi mdi-access-point" slot="icon"></i>
    Lorem ipsum dolor sit amet.
  </c-accordion-item>
  <c-accordion-item expanded="" heading="Two" value="two">
    <mock:shadow-root>
      <div class="c-accordion-item c-accordion-item--outlined">
        <button aria-controls="panel__aca0d198-92da-40ce-8210-9dfdb513a37b" aria-expanded="false" aria-label="Two" class="c-accordion-item__header" id="header__aca0d198-92da-40ce-8210-9dfdb513a37b" tabindex="0">
          <div class="c-accordion-item__icon">
            <slot name="icon"></slot>
          </div>
          <div class="c-accordion-item__title">
            Two
          </div>
          <div class="c-accordion-item__indicator">
            <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
              <path d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z" fill="var(--csc-primary)"></path>
            </svg>
          </div>
        </button>
        <div class="c-accordion-item__content-wrapper">
          <div aria-labelledby="header__aca0d198-92da-40ce-8210-9dfdb513a37b" class="c-accordion-item__content" id="panel__aca0d198-92da-40ce-8210-9dfdb513a37b" role="region"></div>
        </div>
      </div>
    </mock:shadow-root>
    <i class="mdi mdi-nas" slot="icon"></i>
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, perspiciatis?
  </c-accordion-item>
  <c-accordion-item heading="Three" value="three">
    <mock:shadow-root>
      <div class="c-accordion-item c-accordion-item--outlined">
        <button aria-controls="panel__38bcd6a8-42ec-4381-9563-b61c5f7f62e1" aria-expanded="false" aria-label="Three" class="c-accordion-item__header" id="header__38bcd6a8-42ec-4381-9563-b61c5f7f62e1" tabindex="0">
          <div class="c-accordion-item__icon">
            <slot name="icon"></slot>
          </div>
          <div class="c-accordion-item__title">
            Three
          </div>
          <div class="c-accordion-item__indicator">
            <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
              <path d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z" fill="var(--csc-primary)"></path>
            </svg>
          </div>
        </button>
        <div class="c-accordion-item__content-wrapper">
          <div aria-labelledby="header__38bcd6a8-42ec-4381-9563-b61c5f7f62e1" class="c-accordion-item__content" id="panel__38bcd6a8-42ec-4381-9563-b61c5f7f62e1" role="region"></div>
        </div>
      </div>
    </mock:shadow-root>
    <i class="mdi mdi-camera" slot="icon"></i>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia voluptatum perspiciatis itaque!
  </c-accordion-item>
</c-accordion>
`;
